<resources>
    <string name="app_name">Notification</string>
    <string name="name">Name</string>
    <string name="signup">sign up</string>
    <string name="email">Email</string>
    <string name="Telephone">Telephone</string>
    <string name="pw">Password</string>
    <string name="re_pw">Re-type Password</string>
    <string name="register">register</string>
    <string name="cancel">cancel</string>
    <string name="channel_name">Notification</string>
    <string name="channel_description">This is redicect to registraton</string>
</resources>
